--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1324,6 +1324,7 @@
                     <child>
                       <widget class="GtkHBox" id="hbox11">
                         <property name="visible">True</property>
+                        <property name="spacing">6</property>
                         <child>
                           <widget class="GtkButton" id="vol-add">
                             <property name="visible">True</property>
