--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -4,6 +4,7 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkDialog" id="vmm-open-connection">
     <property name="visible">True</property>
+    <property name="border_width">6</property>
     <property name="title" translatable="yes">Add Connection</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
@@ -12,6 +13,7 @@
       <widget class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
+        <property name="spacing">6</property>
         <child>
           <widget class="GtkTable" id="table1">
             <property name="visible">True</property>
@@ -19,7 +21,7 @@
             <property name="n_rows">5</property>
             <property name="n_columns">2</property>
             <property name="column_spacing">3</property>
-            <property name="row_spacing">3</property>
+            <property name="row_spacing">6</property>
             <child>
               <widget class="GtkCheckButton" id="autoconnect">
                 <property name="visible">True</property>
@@ -56,6 +58,7 @@
               <widget class="GtkEntry" id="hostname">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="invisible_char">&#x25CF;</property>
                 <accessibility>
                   <atkproperty name="AtkObject::accessible-name" translatable="yes">Hostname Field</atkproperty>
                 </accessibility>
@@ -168,16 +171,6 @@ Remote tunnel over SSH</property>
             </child>
           </widget>
           <packing>
-            <property name="position">2</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkHSeparator" id="hseparator4">
-            <property name="visible">True</property>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="pack_type">end</property>
             <property name="position">1</property>
           </packing>
         </child>
