--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -533,6 +533,7 @@ For all domains</property>
         <child>
           <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
+            <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="prefs-help">
                 <property name="label">gtk-help</property>
@@ -544,7 +545,9 @@ For all domains</property>
               </widget>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
+                <property name="secondary">True</property>
               </packing>
             </child>
             <child>
@@ -557,6 +560,8 @@ For all domains</property>
                 <signal name="clicked" handler="on_prefs_close_clicked"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
