--- a/src/vmm-create-vol.glade
+++ b/src/vmm-create-vol.glade
@@ -107,6 +107,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="invisible_char">&#x25CF;</property>
+                                    <signal name="changed" handler="on_vol_name_changed"/>
                                   </widget>
                                   <packing>
                                     <property name="position">0</property>
