Fix up glade stock id warning/screwiness.
Some previous glade version messed up a lot of imagemenuitems with
nonstandard text, but using stock icons. Fix these issues.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -404,9 +404,15 @@
                         <property name="label">_Contents</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="use_stock">False</property>
                         <signal name="activate" handler="on_details_help_activate"/>
                         <accelerator key="F1" signal="activate"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="image1">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-help</property>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                   </widget>
