details: Allow changing clock offset value.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1259,6 +1259,7 @@
                                             <child>
                                               <widget class="GtkComboBox" id="overview-clock-combo">
                                                 <property name="visible">True</property>
+                                                <signal name="changed" handler="on_overview_clock_changed"/>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
